// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme › Processors › image process images with data-src 1`] = `
Object {
  "children": null,
  "component": [Function],
  "props": Object {
    "alt": null,
    "height": "auto",
    "isContent": true,
    "key": "https://frontity.com/wp-content/uploads/2018/10/image.jpg",
    "src": "https://frontity.com/wp-content/uploads/2018/10/image.jpg",
    "srcSet": "https://frontity.com/wp-content/uploads/2018/10/image.jpg 800w, https://frontity.com/wp-content/uploads/2018/10/image-300x225.jpg 300w, https://frontity.com/wp-content/uploads/2018/10/image-768x576.jpg 768w, https://frontity.com/wp-content/uploads/2018/10/image-192x144.jpg 192w, https://frontity.com/wp-content/uploads/2018/10/image-384x288.jpg 384w, https://frontity.com/wp-content/uploads/2018/10/image-90x68.jpg 90w, https://frontity.com/wp-content/uploads/2018/10/image-180x135.jpg 180w, https://frontity.com/wp-content/uploads/2018/10/image-561x421.jpg 561w, https://frontity.com/wp-content/uploads/2018/10/image-364x273.jpg 364w, https://frontity.com/wp-content/uploads/2018/10/image-758x569.jpg 758w, https://frontity.com/wp-content/uploads/2018/10/image-608x456.jpg 608w, https://frontity.com/wp-content/uploads/2018/10/image-64x48.jpg 64w, https://frontity.com/wp-content/uploads/2018/10/image-128x96.jpg 128w",
    "width": "100vw",
  },
  "type": "element",
}
`;

exports[`Theme › Processors › image processes images with data-attachment-id 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": null,
          "component": [Function],
          "props": Object {
            "id": 23,
            "isContent": true,
            "key": "23",
          },
          "type": "element",
        },
      ],
      "component": "a",
      "props": Object {},
      "type": "element",
    },
  ],
  "component": [Function],
  "props": Object {
    "context": Object {
      "columns": Array [
        Array [
          Object {
            "id": 23,
            "type": "media",
          },
        ],
        Array [
          Object {
            "id": 24,
            "type": "media",
          },
        ],
        Array [
          Object {
            "id": 25,
            "type": "media",
          },
        ],
      ],
      "options": Object {
        "bar": "media",
      },
    },
    "eventAction": "open content media",
    "eventCategory": "Post",
    "id": 23,
    "type": "media",
  },
  "type": "element",
}
`;

exports[`Theme › Processors › image processes images with data-original 1`] = `
Object {
  "children": null,
  "component": [Function],
  "props": Object {
    "alt": "image 1",
    "height": "auto",
    "isContent": true,
    "key": "https://test.frontity.io/media/image.jpg",
    "src": "https://test.frontity.io/media/image.jpg",
    "srcSet": null,
    "width": "100vw",
  },
  "type": "element",
}
`;

exports[`Theme › Processors › image processes images without data-attachment-id 1`] = `
Object {
  "children": null,
  "component": [Function],
  "props": Object {
    "alt": "image 1",
    "height": "auto",
    "isContent": true,
    "key": "https://test.frontity.io/media/image.jpg",
    "src": "https://test.frontity.io/media/image.jpg",
    "srcSet": "https://test.frontity.io/media/image.jpg",
    "width": "100vw",
  },
  "type": "element",
}
`;
